git-svn-id: svn://svn.hafro.is/jminor/trunk@6197 51816742-9f83-410d-85ed-e7bcf7042953